--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,6 +4,9 @@ FROM node:20-slim
 RUN apt-get update && apt-get install -y --no-install-recommends \
   # Build tools for native modules
   python3 \
+  python3-venv \
+  python3-dev \
+  python3-pip \
   make \
   g++ \
   # Development utilities
