--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   python3-venv \
   python3-dev \
   python3-pip \
+  libmagic-dev \
   make \
   g++ \
   # Development utilities
