--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -8,6 +8,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   python3-dev \
   python3-pip \
   libmagic-dev \
+  redis-server \
   make \
   g++ \
   # Development utilities
