--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,21 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#263de4",
-        "activityBar.background": "#263de4",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#ea5567",
-        "activityBarBadge.foreground": "#15202b",
+        "activityBar.activeBackground": "#2ed0ce",
+        "activityBar.background": "#2ed0ce",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#cf2ed1",
+        "activityBarBadge.foreground": "#e7e7e7",
         "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#263de4",
-        "statusBar.background": "#182cbf",
+        "sash.hoverBorder": "#2ed0ce",
+        "statusBar.background": "#25a6a5",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#263de4",
-        "statusBarItem.remoteBackground": "#182cbf",
+        "statusBarItem.hoverBackground": "#2ed0ce",
+        "statusBarItem.remoteBackground": "#25a6a5",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#182cbf",
+        "titleBar.activeBackground": "#25a6a5",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#182cbf99",
+        "titleBar.inactiveBackground": "#25a6a599",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
     "peacock.color": "#182cbf",
