--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,6 +9,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   python3-pip \
   libmagic-dev \
   redis-server \
+  # Install uv
+  curl -LsSf https://astral.sh/uv/install.sh | sh \
   make \
   g++ \
   # Development utilities
@@ -39,6 +41,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   gh \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
+
+# Install Python dependencies
+RUN /root/.cargo/bin/uv venv && \
+    /root/.cargo/bin/uv pip install -r app/requirements.txt
 
 # Set up npm global package folder
 RUN mkdir -p /usr/local/share/npm-global \
