--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,3 +37,6 @@ ignore = ["E501"]
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
+
+[tool.setuptools.packages.find]
+where = ["app"]
