--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,23 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#2ed0ce",
-        "activityBar.background": "#2ed0ce",
+        "activityBar.activeBackground": "#ddfc5e",
+        "activityBar.background": "#ddfc5e",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#cf2ed1",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#2ed0ce",
-        "statusBar.background": "#25a6a5",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#2ed0ce",
-        "statusBarItem.remoteBackground": "#25a6a5",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#25a6a5",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#25a6a599",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "activityBarBadge.background": "#04b1db",
+        "activityBarBadge.foreground": "#15202b",
+        "commandCenter.border": "#15202b99",
+        "sash.hoverBorder": "#ddfc5e",
+        "statusBar.background": "#d3fb2c",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#c2ef05",
+        "statusBarItem.remoteBackground": "#d3fb2c",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#d3fb2c",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#d3fb2c99",
+        "titleBar.inactiveForeground": "#15202b99"
     },
     "peacock.color": "#182cbf",
-    "peacock.remoteColor": "#25a6a5"
+    "peacock.remoteColor": "#d3fb2c"
 }
