--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,3 +61,10 @@ indent-style = "space"
 
 [tool.setuptools.packages.find]
 where = ["app"]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pytest-asyncio>=1.0.0",
+    "pytest-cov>=6.2.1",
+]
